tests/specs/run/cjs_flag/without_flag.out
error: Uncaught (in promise) ReferenceError: module is not defined
module.exports = { ok: true };
^
    at [WILDCARD]needs_cjs.js:1:1

    info: Deno supports CommonJS modules in .cjs files, or when the closest
          package.json has a "type": "commonjs" option.
    hint: Rewrite this module to ESM,
          or change the file extension to .cjs,
          or add package.json next to the file with "type": "commonjs" option,
          or pass --cjs flag to treat the entry point as CommonJS,
          or pass --unstable-detect-cjs flag to detect CommonJS when loading.
    docs: https://docs.deno.com/go/commonjs
